Misc spacing fixes and Nav Avatar fix

--- a/src/views/MyProfile/myProfile.scss
+++ b/src/views/MyProfile/myProfile.scss
@@ -93,6 +93,11 @@
   }
 }
 
+.noInvolvements {
+  padding-left: 24px;
+  color: $primary-cyan !important;
+}
+
 @media (min-width: $break-sm) {
   .profile-image {
     position: 'relative';
